--- a/index.html
+++ b/index.html
@@ -1,36 +1,126 @@
-<!DOCTYPE html>
-<html lang="id">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IKK Sample Management System</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+/* Atur ulang gaya default browser */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
-    <main>
-        <section class="hero">
-            <h1>IKK Sample Management System</h1>
-            <p class="subtitle">Choose your sample process workflow</p>
-            
-            <div class="card-container">
-                <div class="process-card local">
-                    <span class="emoji">🏠</span>
-                    <h3>Local Sample</h3>
-                    <p>Complete workflow for processing local sample requests with SRF form creation and team coordination</p>
-                   <a href="local-process.html" class="btn-process">Start Local Process →</a>
-                </div>
+/* GAYA LATAR BELAKANG DARI GAMBAR (INDEX.HTML) */
+body {
+    /* Replicate the purple/blue gradient background */
+    background: linear-gradient(135deg, #4b3f8f 0%, #2a2066 100%);
+    color: white; /* Text color is white */
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+    min-height: 100vh; /* Ensure the gradient covers the entire screen */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
 
-                <div class="process-card export">
-                    <span class="emoji">🌎</span>
-                    <h3>Export Sample</h3>
-                    <p>Comprehensive e-Sample system guide for international sample shipments and documentation</p>
-                   <a href="export-process.html" class="btn-process">Start Export Process →</a>
-                </div>
-            </div>
-        </section>
-    </main>
+/* Style untuk the main hero section */
+.hero {
+    padding: 60px 20px;
+    max-width: 1200px;
+    margin: auto;
+}
 
-    <script src="script.js"></script>
-</body>
-</html>
+.hero h1 {
+    font-size: 3em;
+    margin-bottom: 10px;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.subtitle {
+    font-size: 1.2em;
+    margin-bottom: 40px;
+}
+
+/* Card Container for layout */
+.card-container {
+    display: flex;
+    gap: 30px;
+    margin-top: 30px;
+}
+
+/* Individual Process Card Styling (Local/Export) */
+.process-card {
+    flex: 1;
+    background: rgba(255, 255, 255, 0.1); /* Semi-transparent background */
+    backdrop-filter: blur(5px); /* Optional: add a blur effect */
+    border-radius: 20px; /* Highly rounded corners */
+    padding: 40px 30px;
+    border: 1px solid rgba(255, 255, 255, 0.2); /* Subtle border */
+    transition: transform 0.3s, box-shadow 0.3s;
+    min-height: 350px; /* Menjaga konsistensi tinggi kartu */
+}
+
+.process-card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+}
+
+.emoji {
+    font-size: 4em;
+    display: block;
+    margin-bottom: 20px;
+}
+
+.process-card h3 {
+    font-size: 1.8em;
+    margin-bottom: 15px;
+}
+
+.process-card p {
+    font-size: 0.95em;
+    margin-bottom: 30px;
+    color: #cccccc; /* Slightly lighter text for description */
+    min-height: 70px; /* Ensure cards have similar height */
+}
+
+/* Button Styling */
+.btn-process {
+    display: inline-block;
+    background: white;
+    color: #4b3f8f; /* Use the primary purple color for text */
+    padding: 12px 25px;
+    border-radius: 50px; /* Highly rounded pill shape */
+    text-decoration: none;
+    font-weight: bold;
+    transition: background 0.3s;
+}
+
+.btn-process:hover {
+    background: #e0e0e0;
+}
+
+/* Gaya untuk tombol Konversi APK */
+.btn-apk-convert {
+    display: inline-block;
+    background: #00bcd4; /* Warna Cyan/Biru muda untuk menonjolkan fungsi */
+    color: white;
+    padding: 15px 30px;
+    border-radius: 50px;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 1.1em;
+    transition: background 0.3s, transform 0.3s;
+    box-shadow: 0 6px 15px rgba(0, 0, 0, 0.3);
+}
+
+.btn-apk-convert:hover {
+    background: #00acc1;
+    transform: scale(1.03);
+}
+
+/* Responsive adjustment for smaller screens */
+@media (max-width: 768px) {
+    .card-container {
+        flex-direction: column;
+    }
+    .hero h1 {
+        font-size: 2.5em;
+    }
+}
